tests/NormalTests/paczka1/fuzzy1/12056237.err
Error in line 1: uyJc82 S993 73,8
Error in line 7: nABVDfG S992 42,1
Error in line 12: vwolRxg1c A114 45,8
Error in line 2: 0MEiZULpYr S992 90,5
Error in line 21: vwolRxg1c S992 58,1
Error in line 27: 0MEiZULpYr S99 94,6
